--- a/portfolio/src/pages/about.astro
+++ b/portfolio/src/pages/about.astro
@@ -5,12 +5,12 @@ import ContactCTA from '../components/ContactCTA.astro';
 import Hero from '../components/Hero.astro';
 ---
 
-<BaseLayout title="About | Brice Marçais" description="About Brice Marçais Lorem Ipsum">
+<BaseLayout title="About | Brice Marçais" description="About Brice Marçais ">
 	<div class="stack gap-20">
 		<main class="wrapper about">
 			<Hero
-				title="About"
-				tagline="Thanks for stopping by. Read below to learn more about myself and my background."
+				title="À propos"
+				tagline="Merci d'être passé. Lisez ci-dessous pour en savoir plus sur moi et mon parcours."
 			>
 				<img
 					width="1553"
