--- a/portfolio/src/pages/about.astro
+++ b/portfolio/src/pages/about.astro
@@ -21,38 +21,52 @@ import Hero from '../components/Hero.astro';
 			</Hero>
 
 			<section>
-				<h2 class="section-title">Background</h2>
+				<h2 class="section-title">Expériences</h2>
 				<div class="content">
 					<p>
-						Lorem ipsum dolor sit amet, <a href="https://astro.build/">Astro</a> makes people happy.
-						Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Proin nibh nisl condimentum
-						id venenatis a condimentum vitae. Dapibus ultrices in iaculis nunc. Arcu odio ut sem nulla
-						pharetra diam sit amet. Diam quis enim lobortis scelerisque fermentum dui faucibus in ornare.
+						Ma première expérience professionnelle débute en 2018 chez Motoblouz en tant qu'Agent Logistique Polyvalent.
+						Cette expérience m'a principalement appris le travail en équipe avec une bonne cohésion de groupe afin 
+						d'atteindre les objectifs journaliers.
+						Malgré cela, je n'y trouve plus de satisfaction dans ce domaine, je décide donc de quitter ce milieu afin d'intégrer un centre 
+						de formation pour devenir développeur web.
 					</p>
+					<br/>
 					<p>
-						Arcu dui vivamus arcu felis bibendum ut tristique et egestas. Eget gravida cum sociis
-						natoque penatibus. Cras fermentum odio eu feugiat pretium nibh. Proin nibh nisl
-						condimentum id venenatis. Porta nibh venenatis cras sed felis eget velit. Id diam vel
-						quam elementum pulvinar etiam non.
+						Fin 2020, j'intègre la <a href="https://3wacademy.fr">3W ACADEMY</a> avec qui j'apprends les bases du code 
+						en quelques mois.
 					</p>
+					<br/>
 					<p>
-						Ultrices tincidunt arcu non sodales neque sodales ut. Sed enim ut sem viverra aliquet
-						eget sit amet. Lacus luctus accumsan tortor posuere ac ut consequat semper viverra.
-						Viverra accumsan in nisl nisi scelerisque eu ultrices. In massa tempor nec feugiat nisl
-						pretium fusce.
+						Suite à cet enseignement, je poursuis une alternance en compagnie de <a href="https://enia.green/">ENIA</a>.
+						Ma première expérience dans le domaine du digital, j'y ai appris beaucoup sur le métier de développeur, mais aussi, acquis 
+						et développé des compétences dans plusieurs langages en parallèle avec le centre de formation.
+						J'ai pris connaissance des bonnes pratiques dans le code afin d'avoir un travail propre, agréable et lisible.
 					</p>
 				</div>
 			</section>
 			<section>
 				<h2 class="section-title">Education</h2>
 				<div class="content">
-					<p>Corporis voluptates tenetur laudantium.</p>
+					<p>Baccalauréat STI2D option S.I.N (Système d’Information et Numérique).</p>
+					<p>Formation Développeur FULLSTACK.</p>
+					<p>Formation Concepteur Développeur d’Application (non obtenu pour cause de fin d'alternance en cours d'année).</p>
 				</div>
 			</section>
 			<section>
-				<h2 class="section-title">Skills</h2>
+				<h2 class="section-title">Compétences</h2>
 				<div class="content">
-					<p>officia unde omnis</p>
+					<ul>
+						<li>Javascript</li>
+						<li>HTML</li>
+						<li>CSS</li>
+						<li>React</li>
+						<li>Typescript</li>
+						<li>Node.js</li>
+						<li>PHP</li>
+						<li>SQL</li>
+						<li>Git</li>
+						<li>Stack overflow</li>
+					</ul>
 				</div>
 			</section>
 		</main>
