--- a/portfolio/src/pages/about.astro
+++ b/portfolio/src/pages/about.astro
@@ -42,6 +42,11 @@ import Hero from '../components/Hero.astro';
 						et développé des compétences dans plusieurs langages en parallèle avec le centre de formation.
 						J'ai pris connaissance des bonnes pratiques dans le code afin d'avoir un travail propre, agréable et lisible.
 					</p>
+					<br/>
+					<p>
+						Aujourd'hui, j'accepte volontiers toutes les propositions de programmes de formation en alternance ou de formations continues, 
+						dans le but de développer de nouvelles compétences. 
+					</p>
 				</div>
 			</section>
 			<section>
