--- a/portfolio/src/pages/index.astro
+++ b/portfolio/src/pages/index.astro
@@ -31,7 +31,7 @@ const projects = (await getCollection('work'))
 			<header class="hero">
 				<Hero
 					title="Bonjour, je m'appel Brice Marçais"
-					tagline="Je suis un jeune developpeur Fullstack en recherche d'une alternance."
+					tagline="Je suis un jeune developpeur Fullstack en recherche d'une alternance ou formation."
 					align="start"
 				>
 					<div class="roles">
