--- a/portfolio/src/pages/about.astro
+++ b/portfolio/src/pages/about.astro
@@ -10,7 +10,7 @@ import Hero from '../components/Hero.astro';
 		<main class="wrapper about">
 			<Hero
 				title="À propos"
-				tagline="Merci d'être passé. Lisez ci-dessous pour en savoir plus sur moi et mon parcours."
+				tagline="Consultez la description ci-dessous pour en apprendre davantage sur mon expérience et mon cheminement personnel."
 			>
 				<img
 					width="1553"
