--- a/portfolio/src/pages/index.astro
+++ b/portfolio/src/pages/index.astro
@@ -43,7 +43,7 @@ const projects = (await getCollection('work'))
 					alt="Brice Marçais smiling in a red plaid shirt and tortoise shell glasses"
 					width="480"
 					height="620"
-					src="/assets/portrait.jpg"
+					src="/assets/portrait.png"
 				/>
 			</header>
 
@@ -71,7 +71,7 @@ const projects = (await getCollection('work'))
 
 				<div class="cta">
 					<CallToAction href="/work/">
-						View All
+						Voir plus
 						<Icon icon="arrow-right" size="1.2em" />
 					</CallToAction>
 				</div>
