--- a/portfolio/src/pages/about.astro
+++ b/portfolio/src/pages/about.astro
@@ -54,23 +54,21 @@ import Hero from '../components/Hero.astro';
 				<div class="content">
 					<p>Baccalauréat STI2D option S.I.N (Système d’Information et Numérique).</p>
 					<p>Formation Développeur FULLSTACK.</p>
-					<p>Formation Concepteur Développeur d’Application (non obtenu pour cause de fin d'alternance en cours d'année).</p>
+					<p>Formation Concepteur Développeur d’Application (non obtenu pour cause de cloture d'entreprise).</p>
 				</div>
 			</section>
 			<section>
 				<h2 class="section-title">Compétences</h2>
 				<div class="content">
 					<ul>
-						<li>Javascript</li>
-						<li>HTML</li>
-						<li>CSS</li>
+						<li>Javascript, HTML, CSS</li>
 						<li>React</li>
 						<li>Typescript</li>
 						<li>Node.js</li>
-						<li>PHP</li>
-						<li>SQL</li>
 						<li>Git</li>
 						<li>Stack overflow</li>
+						<li>SQL</li>
+						<li>PHP</li>
 					</ul>
 				</div>
 			</section>
