--- a/portfolio/src/pages/index.astro
+++ b/portfolio/src/pages/index.astro
@@ -30,7 +30,7 @@ const projects = (await getCollection('work'))
 		<div class="wrapper stack gap-8 lg:gap-20">
 			<header class="hero">
 				<Hero
-					title="Bonjour, je m'appel Brice Marçais"
+					title="Bonjour, je m'appelle Brice Marçais"
 					tagline="Je suis un jeune developpeur Fullstack en recherche d'une alternance ou formation."
 					align="start"
 				>
