--- a/portfolio/src/pages/work.astro
+++ b/portfolio/src/pages/work.astro
@@ -20,7 +20,7 @@ const projects = (await getCollection('work')).sort(
 	<div class="stack gap-20">
 		<main class="wrapper stack gap-8">
 			<Hero
-				title="Mes travaux"
+				title="Mes projets"
 				tagline="Regardez mes projets ci-dessous pour avoir une idée de mon expérience passée."
 				align="start"
 			/>
