--- a/portfolio/src/components/ContactCTA.astro
+++ b/portfolio/src/components/ContactCTA.astro
@@ -4,7 +4,7 @@ import Icon from './Icon.astro';
 ---
 
 <aside>
-	<h2>Vous songez a travaillé avec moi ?</h2>
+	<h2>Vous songez à travailler avec moi ?</h2>
 	<CallToAction href="https://www.linkedin.com/in/brice-marcais/">
 		Contactez moi
 		<Icon icon="paper-plane-tilt" size="1.2em" />
