--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ const projects = (await getCollection('work'))
 				</Hero>
 
 				<img
-					alt="Brice Marçais smiling in a red plaid shirt and tortoise shell glasses"
+					alt="Brice Marçais"
 					width="480"
 					height="620"
 					src="/assets/portrait.png"
