--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const projects = (await getCollection('work'))
 			<header class="hero">
 				<Hero
 					title="Bonjour, je m'appelle Brice Marçais"
-					tagline="Je suis un jeune developpeur Fullstack en recherche d'une alternance ou formation."
+					tagline="Je suis un jeune developpeur Fullstack en recherche d'une entreprise pour une alternance."
 					align="start"
 				>
 					<div class="roles">
